# docket

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RESEARCH-STORAGE.md  ROADMAP.md  install.sh  release.toml
.claude-plugin/: marketplace.json
.github/workflows/: auto-tag.yml  release.yml
docs/: CHANGELOG.md  RESEARCH.md
docs/superpowers/plans/: 2026-05-13-tui-pr1-module-extraction.md  2026-05-13-tui-pr2-skeleton.md  2026-05-13-tui-pr3-main-screen.md  2026-05-13-tui-pr4-mutations.md  2026-05-13-tui-pr5-edit-form.md  2026-05-13-tui-pr6-start-integration.md
docs/superpowers/specs/: 2026-05-13-docket-tui-design.md  2026-05-17-tui-polish-design.md
plugin/: CONVENTIONS.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: create-task.md  start.md
src/: agent_session_info.rs  db.rs  main.rs  model.rs  prompts.rs
src/cli/: add.rs  backlog.rs  blocked.rs  group.rs  init.rs  ls.rs  mod.rs  prompt.rs  ready.rs  rm.rs  session.rs  show.rs  start.rs  status.rs  tui.rs  update.rs
src/tui/: app.rs  filters.rs  keybindings.rs  mod.rs
src/tui/screens/: confirm.rs  edit.rs  filter_prompt.rs  help.rs  main.rs  mod.rs  session_picker.rs
src/tui/widgets/: footer.rs  markdown.rs  mod.rs  task_detail.rs  task_list.rs  top_bar.rs
templates/: commit.md  create-task.md  pr.md  tdd-pursuit.md
tests/: cli.rs  sessions.rs  start.rs  update.rs
