[package]
name = "docket"
version = "0.0.2"
edition = "2021"
description = "Agent-shaped task tracker with TDD execution harness"

[[bin]]
name = "docket"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
tui-textarea = "0.7"

[profile.release]
lto = true
strip = true
opt-level = "z"
